# flstudio-ai-agent

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.gemini/: rules  starter-prompt.md
.github/workflows/: ci.yml
config/: dawmind.toml
dawmind/: __init__.py  cli.py  config.py  orchestrator.py
dawmind/api_layer/: __init__.py  bridge_server.py  commands.py  protocol.py  state.py
dawmind/llm/: __init__.py  claude.py  gemini_client.py  local.py  router.py
dawmind/tools/: __init__.py  channel_tools.py  mixer_tools.py  plugin_tools.py  transport_tools.py  vision_tools.py
dawmind/vision_layer/: __init__.py  capture.py  executor.py  parser.py  reasoning.py  verifier.py
docs/: SETUP.md
fl_script/: device_DAWMind.py  device_DAWMind_minimal.py  diagnose_fl_script.bat  ipc_handler.py  setup_fl_script.ps1
omniparser/: Dockerfile  README.md  deploy_cloudrun.ps1  deploy_cloudrun.sh  deploy_gcp.sh  server.py
tests/: test_bridge.py  test_claude_tooluse.py  test_commands.py  test_gemini_vision.py  test_orchestrator_agentic.py  test_state.py  test_tool_registry.py  test_vision_pipeline.py
tests/integration/: conftest.py  mock_fl_studio.py  test_e2e.py
